# BenchmarkSecretContracts

./: .gitignore  Cargo.toml  Makefile  README.md
src/: contract.rs
